--- a/static/style.css
+++ b/static/style.css
@@ -7,24 +7,24 @@
 }
 
 body {
-    height: 100vh;
+    height: calc(100vh - 20px);
+    padding: 10px;   
     font-family: Arial, Helvetica, sans-serif;
-    background-image: radial-gradient(farthest-corner at 0 0, #FED64C, #FD7B42 20%, #CF388C, #4861CA);
     display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow-x: hidden;
+    row-gap: 30px;
+    flex-direction: column;
 }
 
-.pagina-login {
+.pagina-login, .pagina-nova-tarefa, .pagina-minhas-tarefas {
     width: 300px;
     background-color: #fff;
     padding: 20px;
     border-radius: 12px;
-    margin: auto;
+    margin: 0 auto;
 }
 
 form {
+    width: 100%;
     font-family: "Poppins";
     font-size: 1.2em;
     display: flex;
@@ -34,7 +34,7 @@ form {
     box-sizing: border-box;
 }
 
-.pagina-login form input {
+form input {
     width: 100%;
     background-color: #dddddd;
     padding: 8px;
@@ -43,34 +43,40 @@ form {
     box-sizing: border-box;
 }
 
-.pagina-login form input:focus {
+form input:focus {
     background-color: #cfcfcf;
     border: 0;
 }
 
-.pagina-login input[type="submit"] {
+input[type="submit"] {
     background-color: #CF388C;
     color: #fff;
     font-size: 18px;
     transition: 200ms;
 }
 
-.pagina-login input[type="submit"]:hover,
-.pagina-login input[type="submit"]:active,
-.pagina-login input[type="submit"]:focus {
+input[type="submit"]:hover,
+input[type="submit"]:active,
+input[type="submit"]:focus {
     background-color: #a72d70;
     cursor: pointer;
 }
 
-.pagina-login form p {
+form p {
     font-size: 0.8em;
 }
 
-.pagina-login form a {
+form a, a.autoria {
     text-decoration: none;
     color: #4861CA;
 }
 
 form#form-cadastro {
     display: none;
+}
+
+@media screen and (max-width:350px) {
+    .pagina-login, .pagina-nova-tarefa, .pagina-minhas-tarefas {
+        width: 200px;
+    }
 }
