--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
-@import "https://fonts.googleapis.com/css?family=Poppins:300";
+@import url("https://fonts.googleapis.com/css?family=Poppins:300");
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 * {
     margin: 0;
@@ -26,7 +27,7 @@ body {
 form {
     width: 100%;
     font-family: "Poppins";
-    font-size: 1.2em;
+    font-size: 19.2px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -73,6 +74,58 @@ form a, a.autoria {
 
 form#form-cadastro {
     display: none;
+}
+
+.btn {
+    font-size: 16px;
+    font-weight: bold;
+    color: #fff;
+    background-color: #FD7B42;
+    padding: 10px;
+    border: 0;
+    border-radius: 3px;
+    transition: 200ms;
+}
+
+.btn:hover {
+    background-color: #d66737;
+    cursor: pointer;
+}
+
+.pagina-minhas-tarefas > h1{
+    margin-bottom: 20px;
+}
+
+.tarefa {
+    font-family: "Roboto";
+    display: flex;
+    row-gap: 10px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.botoes {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.btn#btn-concluida {
+    background-color: #31e431;
+}
+
+.btn#btn-excluir {
+    background-color: #d82525;
+}
+
+.btn#btn-concluida:hover {
+    background-color: #26b626;
+}
+
+.btn#btn-excluir:hover {
+    background-color: #b81f1f;
 }
 
 @media screen and (max-width:350px) {
