--- a/static/style.css
+++ b/static/style.css
@@ -98,6 +98,7 @@ form#form-cadastro {
 
 .tarefa {
     font-family: "Roboto";
+    margin-bottom: 40px;
     display: flex;
     row-gap: 10px;
     flex-direction: column;
