--- a/static/style.css
+++ b/static/style.css
@@ -94,12 +94,17 @@ form a, a.autoria {
 
 .tarefa {
     font-family: "Roboto";
-    margin-bottom: 40px;
+    margin-bottom: 30px;
     display: flex;
     row-gap: 10px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.tarefa + .tarefa {
+    padding-top: 20px;
+    border-top: 1px solid #797979;
 }
 
 .botoes {
