--- a/static/style.css
+++ b/static/style.css
@@ -21,7 +21,7 @@ body {
     background-color: #fff;
     padding: 20px;
     border-radius: 12px;
-    margin: 0 auto;
+    margin: auto;
 }
 
 form {
